--- a/Calcular_suma.html
+++ b/Calcular_suma.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Suma de dos números</title>
+    <title>Calculadora Básica</title>
     <style>
         .container {
             text-align: center;
@@ -30,7 +30,7 @@
 
 <div class="container">
     <div class="content">
-        <h2>Suma de dos números</h2>
+        <h2>Calculadora Básica</h2>
 
         <form>
             <div class="input-container">
@@ -41,7 +41,9 @@
                 <label for="num2">Segundo número:</label>
                 <input type="text" id="num2">
             </div>
-            <input type="button" value="Calcular suma"  onclick="calcularSuma()">
+            <input type="button" value="Calcular suma" style="background-color: green;" onclick="calcularSuma()">
+            <input type="button" value="Calcular resta" style="background-color: red;" onclick="calcularResta()">
+            <input type="button" value="Calcular multiplicación" onclick="calcularMultiplicacion()">
         </form>
 
         <div id="resultado"></div>
@@ -50,19 +52,128 @@
 
 <script>
 function calcularSuma() {
-    // Obtener los valores de los campos de entrada
     var num1 = parseFloat(document.getElementById("num1").value);
     var num2 = parseFloat(document.getElementById("num2").value);
 
-    // Verificar si ambos valores son números
     if (!isNaN(num1) && !isNaN(num2)) {
-        // Calcular la suma
         var suma = num1 + num2;
-
-        // Mostrar el resultado en el elemento con id "resultado"
         document.getElementById("resultado").innerHTML = "El resultado de la suma es: " + suma;
     } else {
-        // Mostrar un mensaje de error si los valores no son números
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularResta() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var resta = num1 - num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la resta es: " + resta;
+    } else {
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularMultiplicacion() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var multiplicacion = num1 * num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la multiplicación es: " + multiplicacion;
+    } else {
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+</script>
+
+</body>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Calculadora Básica</title>
+    <style>
+        .container {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .content {
+            display: inline-block;
+            text-align: left;
+        }
+        .input-container {
+            display: flex;
+            align-items: center;
+            margin-bottom: 10px;
+        }
+        .input-container label {
+            width: 150px;
+            margin-right: 10px;
+        }
+        .input-container input[type="text"] {
+            width: 150px;
+        }
+		
+    </style>
+</head>
+<body>
+
+<div class="container">
+    <div class="content">
+        <h2>Calculadora Básica</h2>
+
+        <form>
+            <div class="input-container">
+                <label for="num1">Primer número:</label>
+                <input type="text" id="num1">
+            </div>
+            <div class="input-container">
+                <label for="num2">Segundo número:</label>
+                <input type="text" id="num2">
+            </div>
+            <input type="button" value="Calcular suma" style="background-color: green;" onclick="calcularSuma()">
+            <input type="button" value="Calcular resta" style="background-color: red;" onclick="calcularResta()">
+            <input type="button" value="Calcular multiplicación" onclick="calcularMultiplicacion()">
+        </form>
+
+        <div id="resultado"></div>
+    </div>
+</div>
+
+<script>
+function calcularSuma() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var suma = num1 + num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la suma es: " + suma;
+    } else {
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularResta() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var resta = num1 - num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la resta es: " + resta;
+    } else {
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularMultiplicacion() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var multiplicacion = num1 * num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la multiplicación es: " + multiplicacion;
+    } else {
         document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
     }
 }
@@ -70,5 +181,3 @@ function calcularSuma() {
 
 </body>
 </html>
-
-
