--- a/Calcular_suma.html
+++ b/Calcular_suma.html
@@ -1,7 +1,10 @@
+git
+# Modificar HTML para añadir división
+cat > Calcular_suma.html << 'EOF'
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Suma de dos números</title>
+    <title>Calculadora con División</title>
     <style>
         .container {
             text-align: center;
@@ -30,7 +33,7 @@
 
 <div class="container">
     <div class="content">
-        <h2>Suma de dos números</h2>
+        <h2>Calculadora con División</h2>
 
         <form>
             <div class="input-container">
@@ -41,7 +44,9 @@
                 <label for="num2">Segundo número:</label>
                 <input type="text" id="num2">
             </div>
-            <input type="button" value="Calcular suma"  onclick="calcularSuma()">
+            <input type="button" value="Calcular suma" style="background-color: green;" onclick="calcularSuma()">
+            <input type="button" value="Calcular resta" style="background-color: red;" onclick="calcularResta()">
+            <input type="button" value="Calcular división" onclick="calcularDivision()">
         </form>
 
         <div id="resultado"></div>
@@ -50,19 +55,41 @@
 
 <script>
 function calcularSuma() {
-    // Obtener los valores de los campos de entrada
     var num1 = parseFloat(document.getElementById("num1").value);
     var num2 = parseFloat(document.getElementById("num2").value);
 
-    // Verificar si ambos valores son números
     if (!isNaN(num1) && !isNaN(num2)) {
-        // Calcular la suma
         var suma = num1 + num2;
-
-        // Mostrar el resultado en el elemento con id "resultado"
         document.getElementById("resultado").innerHTML = "El resultado de la suma es: " + suma;
     } else {
-        // Mostrar un mensaje de error si los valores no son números
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularResta() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        var resta = num1 - num2;
+        document.getElementById("resultado").innerHTML = "El resultado de la resta es: " + resta;
+    } else {
+        document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
+    }
+}
+
+function calcularDivision() {
+    var num1 = parseFloat(document.getElementById("num1").value);
+    var num2 = parseFloat(document.getElementById("num2").value);
+
+    if (!isNaN(num1) && !isNaN(num2)) {
+        if (num2 !== 0) {
+            var division = num1 / num2;
+            document.getElementById("resultado").innerHTML = "El resultado de la división es: " + division;
+        } else {
+            document.getElementById("resultado").innerHTML = "Error: No se puede dividir por cero.";
+        }
+    } else {
         document.getElementById("resultado").innerHTML = "Por favor, ingrese dos números válidos.";
     }
 }
@@ -70,5 +97,3 @@ function calcularSuma() {
 
 </body>
 </html>
-
-
