--- a/Calcular_suma.html
+++ b/Calcular_suma.html
@@ -41,10 +41,10 @@
                 <label for="num2">Segundo número:</label>
                 <input type="text" id="num2">
             </div>
-            <input type="button" value="Calcular suma" style="background-color: green;" onclick="calcularSuma()">
-            <input type="button" value="Calcular resta" style="background-color: red;" onclick="calcularResta()">
-            <input type="button" value="Calcular multiplicación" onclick="calcularMultiplicacion()">
-            <input type="button" value="Calcular división" onclick="calcularDivision()">
+            <input type="button" value="Calcular suma" style="background-color: blue; color: white;" onclick="calcularSuma()">
+            <input type="button" value="Calcular resta" style="background-color: orange; color: white;" onclick="calcularResta()">
+            <input type="button" value="Calcular multiplicación" style="background-color: purple; color: white;" onclick="calcularMultiplicacion()">
+            <input type="button" value="Calcular división" style="background-color: brown; color: white;" onclick="calcularDivision()">
         </form>
 
         <div id="resultado"></div>
