--- a/Calcular_suma.html
+++ b/Calcular_suma.html
@@ -1,3 +1,4 @@
+cat > Calcular_suma.html << 'EOF'
 <!DOCTYPE html>
 <html>
 <head>
@@ -41,8 +42,8 @@
                 <label for="num2">Segundo número:</label>
                 <input type="text" id="num2">
             </div>
-            <input type="button" value="Calcular suma" style="background-color: blue; color: white;" onclick="calcularSuma()">
-            <input type="button" value="Calcular resta" style="background-color: orange; color: white;" onclick="calcularResta()">
+            <input type="button" value="Calcular suma" style="background-color: cyan; color: black;" onclick="calcularSuma()">
+            <input type="button" value="Calcular resta" style="background-color: pink; color: black;" onclick="calcularResta()">
             <input type="button" value="Calcular multiplicación" style="background-color: purple; color: white;" onclick="calcularMultiplicacion()">
             <input type="button" value="Calcular división" style="background-color: brown; color: white;" onclick="calcularDivision()">
         </form>
@@ -107,3 +108,4 @@ function calcularDivision() {
 
 </body>
 </html>
+EOF
